[gd_scene load_steps=4 format=3 uid="uid://working_arena"]

[ext_resource type="Script" path="res://scripts/WorkingArena.gd" id="1_working"]

[sub_resource type="PlaceholderTexture2D" id="PlayerTexture"]
size = Vector2(20, 20)

[sub_resource type="PlaceholderTexture2D" id="ArenaTexture"]
size = Vector2(800, 600)

[node name="WorkingArena" type="Node2D"]
script = ExtResource("1_working")

[node name="ArenaBackground" type="Sprite2D" parent="."]
position = Vector2(400, 300)
modulate = Color(0.2, 0.2, 0.3, 1)
texture = SubResource("ArenaTexture")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
modulate = Color(0, 1, 0, 1)
texture = SubResource("PlayerTexture")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="VBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 100.0
grow_vertical = 0

[node name="EnemyCounter" type="Label" parent="UI/GameUI"]
layout_mode = 2
text = "Enemies: 0/5"

[node name="Controls" type="Label" parent="UI/GameUI"]
layout_mode = 2
text = "WASD = Move, F3 = Debug"